edited internal style

--- a/landing-page.html
+++ b/landing-page.html
@@ -1,5 +1,104 @@
 <link href="https://fonts.googleapis.com/css?family=Fahkwang" rel="stylesheet">
-<link href="landing-page.css" rel="stylesheet">
+
+<style>
+	body {
+	  margin: 0;
+	}
+	.main-wrapper {
+	  width: 100%;
+	  font-family: 'Fahkwang', sans-serif;
+	  background-color: #dbdddc;
+	  margin: 0;
+	}
+	.navigation-bar {
+	  background: #fcf9e2;
+	  display: flex;
+	  align-items: center;
+	  width: 100%;
+	  height: 80px;
+	  padding: 0 0 0 12px;
+	 }
+	.navigation-bar a {
+	   color: #000;
+	}
+	.navigation-bar a:hover {
+		 text-decoration: none;
+	}
+	
+	.logo {
+	  display: flex;
+	  align-items: center;
+	 width: 80%;
+	}
+	.logo img {
+	  width: 80px;
+	}
+	.logo a {
+	  margin-left: 8px;
+	}
+	.portfolio {
+	  margin: 0 10px;
+	}
+	.slogan-container {
+	  height: 250px;
+	  color: #fff;
+	  font-size: 32px;
+	  background-image: url('https://static.wixstatic.com/media/961184_5097411a461e487a95857e6834917763~mv2.jpg/v1/fill/w_980,h_250,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/961184_5097411a461e487a95857e6834917763~mv2.jpg');
+	}
+	.services > span, .footer > span {
+	  font-size: 32px;
+	}
+	
+	.services {
+	  margin-top: 18px;
+	}
+	
+	.services-containers {
+	  display: flex;
+	  flex-direction: column;
+	  margin: 0 102px;
+	}
+	.service {
+	  display: flex;
+	  justify-content: space-between;
+	  align-items: center;
+	  height: 82px;
+	  border-bottom: 1px solid #000;
+	}
+	.service .service-type {
+	  font-size: 24px;
+	  width: 265px;
+	  display: block;
+	}
+	.service .amount {
+	  font-size: 16px;
+	}
+	
+	.booking-button {
+	  background-color: #353535;
+	  color: #fff;
+	  height: 32px;
+	  width: 120px;
+	  border: none;
+	}
+	
+	.booking-button:hover {
+	 color: #353535;
+	 background-color: #fff;
+	 border: 1px solid #353535;
+	 font-weight: bold;
+	}
+	
+	.footer {
+	  background: #bbc0a8;
+	  margin-top: 32px;
+	  padding-bottom: 12px;
+	}
+	.footer p {
+	  margin: 0;
+	}
+	
+	</style>
 
 <main class="main-wrapper">
 <nav class="navigation-bar">
